# labs-nichefinder

./: .gitignore  .gitmodules  API_TOKEN_SETUP.md  CONNECTOR_GENERATION_HANDOFF.md  CONVERSATION_HANDOFF.md  Cargo.toml  FEATURE_ADDITIONAL_DATA_SOURCES.md  FEATURE_OPPORTUNITY_DESCRIPTIONS.md  FEATURE_SERVICE_CALL_TRACE.md  FRESH_CHAT_CONTEXT.md  PHASE_2_COMPLETE.md  PHASE_2_HANDOFF.md  PHASE_3.5_IMPLEMENTATION_SUMMARY.md  PHASE_3_HANDOFF.md  PRD.md  PROGRESS_REPORT.md  QUICK_START.md  README.md  READY_FOR_API_KEYS.md  REDDIT_ALTERNATIVES.md  REDDIT_SETUP_SIMPLE.md  SETUP_API_KEYS.md  STATUS_SUMMARY.md  TRANSITIONAL_PROMPT.md  UDM_CAPABILITIES_ANALYSIS.md  UI_IMPLEMENTATION_PLAN.md  UI_MOCKUP.md  UI_STRATEGY.md  YOUTUBE_API_ANALYSIS.md  demo-no-auth.sh  health-check.sh  setup-credentials.sh  start-demo.sh  start-full-stack.sh  stop-demo.sh  stop-full-stack.sh  test-connectors-direct.sh  test-token-validation.sh  test-with-api-keys.sh  test-workflow-execution.sh  (+1 more)
crates/connector-generator/: Cargo.toml
crates/connector-generator/src/: lib.rs  main.rs
crates/nichefinder-core/: Cargo.toml
crates/nichefinder-core/src/: analysis.rs  collectors.rs  connector_gen.rs  error.rs  lib.rs  reporting.rs  scoring.rs  transform.rs  types.rs
crates/nichefinder-core/tests/: connector_generation_test.rs  github_collector_test.rs  hacs_collector_test.rs  reddit_collector_test.rs
crates/nichefinder-server/: .env.example  Cargo.toml
crates/nichefinder-server/src/: api.rs  config.rs  db.rs  main.rs  scheduler.rs
data/: analysis_report.md
data/raw/: fetch_hacs_integrations-result.json  search_github_repos-result.json  search_youtube_videos-result.json
results/: home-assistant-analysis-20251211-221102.json
web-ui/: README.md  package-lock.json  package.json
web-ui/src/: App.tsx  index.css
web-ui/src/api/: client.ts
web-ui/src/components/artifacts/: ArtifactList.tsx  ArtifactPreview.tsx  WorkflowDefinition.tsx
web-ui/src/components/command-center/: CardsView.tsx  InsightFeed.tsx  KpiCard.tsx  MatrixView.tsx  OpportunitiesCommandCenter.tsx  OpportunityCard.tsx  SignalLanesView.tsx
web-ui/src/components/layout/: Footer.tsx  Header.tsx  TabNavigation.tsx
web-ui/src/components/results/: OpportunityDrawer.tsx
web-ui/src/components/shared/: CodeViewer.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  StatusBadge.tsx
web-ui/src/components/system/: ArchitectureDiagram.tsx  ServiceHealthCard.tsx  SystemStats.tsx
web-ui/src/components/trace/: AggregatedServiceCall.tsx  ServiceCallTrace.tsx  TraceEntry.tsx
web-ui/src/pages/: Artifacts.tsx  DataPipeline.tsx  Results.tsx  SystemOverview.tsx  WorkflowExecution.tsx
web-ui/src/types/: api.ts  index.ts
web-ui/src/utils/: format.ts  opportunityHelpers.ts
workflows/: home-assistant-analysis-peg-engine.json
