[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["JG <168038038+geigermatic@users.noreply.github.com>"]
license = "TBD"
repository = "https://github.com/Ngentix/labs-nichefinder"

[workspace.dependencies]
# UDM dependencies (from submodule)
udm-core = { path = "deps/UDM-single/crates/udm-core" }
udm-peg = { path = "deps/UDM-single/crates/udm-peg" }
udm-connector-generator = { path = "deps/UDM-single/crates/udm-connector-generator" }

# Common dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
