[package]
name = "nichefinder-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# UDM dependencies
udm-core.workspace = true
udm-peg.workspace = true
udm-connectors.workspace = true
udm-discovery.workspace = true
udm-connector-generator = { path = "../../deps/UDM-single/crates/udm-connector-generator" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
url.workspace = true
urlencoding = "2.1"
base64 = "0.22"

# Statistics and scoring
ndarray.workspace = true
statrs.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "nichefinder-analyze"
path = "src/bin/analyze.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

