[package]
name = "nichefinder-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nichefinder-server"
path = "src/main.rs"

[dependencies]
# Internal dependencies
nichefinder-core = { path = "../nichefinder-core" }

# UDM dependencies
udm-core.workspace = true
udm-peg.workspace = true
udm-connectors.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Database
sqlx = { workspace = true, features = ["sqlite"] }

# Scheduling
tokio-cron-scheduler = "0.13"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
url.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
clap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

